# neon-tonic-example

./: Cargo.toml  README.md  index.js  package-lock.json  package.json
proto/: service.proto
src/: lib.rs
