[package]
name = "neon-tonic-example"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]
build = "src/build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.19"

[dependencies.neon]
version = "0.10.0-alpha.3"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]

[build-dependencies]
tonic-build = "0.6"
